--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,18 @@
         <pluginManagement>
             <!-- All plugins ordered by shortname (antrun, assembly ...) -->
             <plugins>
+            	<plugin>
+				    <groupId>org.sonatype.plugins</groupId>
+				    <artifactId>nexus-staging-maven-plugin</artifactId>
+				    <version>1.6.7</version>
+				    <extensions>true</extensions>
+				    <configuration>
+					    <!-- The Base URL of Nexus instance where we want to stage -->
+					    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					    <!-- The server "id" element from settings to use authentication from -->
+					    <serverId>ossrh</serverId>
+				</configuration>
+			</plugin>
                 <plugin>
                     <groupId>org.codehaus.plexus</groupId>
                     <artifactId>plexus-component-metadata</artifactId>
