16732 - provide a profile that can build all 5 che projects in a single reactor
Change-Id: I114ee8411b5ddc284c19cc964fdc6837907c3575
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -2115,5 +2115,16 @@
                 </plugins>
             </build>
         </profile>
+        <!-- use this profile to build (or deploy) che-parent, dashboard, workspace loader, che server in a single reactor -->
+        <profile>
+            <id>server</id>
+            <modules>
+                <module>dependencies</module>
+                <module>../che-docs</module>
+                <module>../che-dashboard</module>
+                <module>../che-workspace-loader</module>
+                <module>../che</module>
+            </modules>
+        </profile>
     </profiles>
 </project>
