--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <animal-sniffer.signature.groupId>org.codehaus.mojo.signature</animal-sniffer.signature.groupId>
         <animal-sniffer.signature.version>1.0</animal-sniffer.signature.version>
         <archiveClasses>false</archiveClasses>
-        <com.google.errorprone>2.3.3</com.google.errorprone>
+        <com.google.errorprone>2.3.4</com.google.errorprone>
         <currentYear>2018</currentYear>
         <!--  maven-javadoc-plugin -->
         <detectOfflineLinks>false</detectOfflineLinks>
@@ -525,7 +525,6 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${version.failsafe.plugin}</version>
                     <configuration>
-                        <argLine>--illegal-access=permit</argLine>
                         <systemPropertyVariables>
                             <!-- To avoid conflicts on CI server - PAR-192 -->
                             <!-- There is an incompatibility with Byteman - used in social -->
@@ -1689,18 +1688,23 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>${version.compiler.plugin}</version>
+                        <dependencies>
+                            <!-- override plexus-compiler-javac-errorprone's dependency on
+                             Error Prone with the latest version -->
+                            <dependency>
+                                <groupId>com.google.errorprone</groupId>
+                                <artifactId>error_prone_core</artifactId>
+                                <version>${com.google.errorprone}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.codehaus.plexus</groupId>
+                                <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                                <version>2.5</version>
+                            </dependency>
+                        </dependencies>
                         <configuration>
-                            <compilerArgs>
-                                <!-- XXX: all Error Prone args should come in a single argument -->
-                                <arg>-XDcompilePolicy=simpl -Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode</arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths>
-                                <path>
-                                    <groupId>com.google.errorprone</groupId>
-                                    <artifactId>error_prone_core</artifactId>
-                                    <version>${com.google.errorprone}</version>
-                                </path>
-                            </annotationProcessorPaths>
+                            <compilerId>javac-with-errorprone</compilerId>
+                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -1772,9 +1776,6 @@
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
-                            <argLine>--illegal-access=permit</argLine>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
