--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eclipse.che.parent</groupId>
     <artifactId>maven-parent-pom</artifactId>
-    <version>7.12.2-SNAPSHOT</version>
+    <version>7.12.2</version>
     <packaging>pom</packaging>
     <name>Che parent POM</name>
     <description>Provides default project configuration for Che projects</description>
@@ -1674,6 +1674,11 @@
                     </plugin>
                 </plugins>
             </build>
+            <modules>
+                <module>../che-dashboard</module>
+                <module>../che-workspace-loader</module>
+                <module>../che</module>
+            </modules>
             <properties>
                 <!-- Additional properties to activate the compression of already compressed archives - time expensive -->
                 <maven.assembly.recompressZippedFiles>true</maven.assembly.recompressZippedFiles>
